# docusign-scraper

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
data/agreement-manager-api/: chunks.jsonl  manifest.json
data/agreement-manager-support/: chunks.jsonl  manifest.json
data/docusign-account-admin/: chunks.jsonl  manifest.json
data/docusign-admin-api/: chunks.jsonl  manifest.json
data/docusign-agreement-desk/: chunks.jsonl  manifest.json
data/docusign-agreement-prep/: chunks.jsonl  manifest.json
data/docusign-ai-agents/: chunks.jsonl  iam-toolkit.md  manifest.json
data/docusign-app-center-extensions/: chunks.jsonl  extension-apps.md  manifest.json
data/docusign-click/: chunks.jsonl  manifest.json
data/docusign-clm/: chunks.jsonl  manifest.json
data/docusign-connected-fields/: chunks.jsonl  manifest.json
data/docusign-esignature-for-salesforce/: chunks.jsonl  manifest.json
data/docusign-esignature-rest-api/: manifest.json
data/docusign-iam-for-sales/: chunks.jsonl  (+1 more)
docs/: README.md  agreement-manager-ui-screens.md  ai-extraction-fields.html  ai-extraction-fields.md  contract-hierarchy.html  iam-coverage-matrix.html  iam-products.html  iam-products.md  iris-chat-entry-points.html  iris-chat-entry-points.md  product-embedding.md  sc-guide-salesforce-iam-use-cases.md
scraper/: __init__.py  __main__.py  cli.py  config.py  discover.py  fetcher.py  models.py  output.py  pipeline.py  transform.py  urls.py
scripts/: promote.py
tests/: test_discover.py  test_fetcher.py  test_output.py  test_transform.py  test_urls.py
(+4431 files in other folders)
